<resources>
    <string name="app_name">Training Center</string>
    <string name="map_key" translatable="false">AIzaSyAMmvSeyoFoSYSNHIjzziCNEYPWSNWfI-g</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Training Center</string>
    <string name="nav_header_subtitle">Welcome</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_arabic">Arabic</string>
    <string name="action_english">English</string>
    <string name="forget_password_title">Forget Password</string>


    <string name="menu_home">Home</string>
    <string name="menu_registration">Registration</string>
    <string name="menu_login">LogIn</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_location">Current Location</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main_user">MainUserActivity</string>
    <string name="title_activity_teacher">Teachers</string>
    <string name="tab_text_1">Search</string>
    <string name="tab_text_2">Subject</string>
    <string name="tab_text_3">Reservation</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_teacher_maps">Map</string>
</resources>
